2010-11-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix cwrapper test failure with --disable-static.
	* tests/cwrapper.at (cwrapper and installed shared libraries):
	Compile program source without libtool, so we can be sure a
	non-PIC object will be created.

2010-11-01  Peter Rosin  <peda@lysator.liu.se>

	docs: Windows DLLs and headers.
	* doc/libtool.texi (Platform quirks): Add new subsection
	'Windows DLLs'.

	* doc/libtool.texi (Platform quirks): Fix typo.

2010-10-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	docs: mention shell requirement for libtool script.
	* doc/libtool.texi (Invoking libtool): Document that the shell
	used to invoke libtool needs to be the same used to configure
	it.
	* THANKS: Update.
	Report by Markus Duft.

2010-10-15  Gary V. Vaughan  <gary@gnu.org>

	libtool: remove redundant unsubstituted shell var defaults.
	* Makefile.am (libltdl/config/ltmain.sh): Boilerplate code from
	libltdl/config/general.m4 sets some default shell variables
	designed to be substituted by `$(configure_edit)'.  Actually,
	`libtool' uses the language tag values for those variables, and
	`ltmain.m4sh' is not passed through `$(configure_edit)', so they
	are just noise.  Edit them out at bootstrap time.

2010-10-15  Gary V. Vaughan  <gary@gnu.org>

	maint: don't leak developer GREP, SED etc into distribution file.
	* Makefile.am: Having rearranged the file, now apply the actual
	changes to follow-up.
	(edit): Split into two parts...
	(bootstrap_edit): ...substitutions that should happen at bootstrap
	time...
	(configure_edit): ...and substitutions that should not happen until
	configure time.
	* Makefile.am (libltdl/m4/ltversion.m4, libltdl/config/ltmain.sh)
	(libtoolize.in, tests/package.m4): Use bootstrap_edit.
	(libtoolize, tests/defs): Use configure_edit.
	* HACKING (Release Procedure): Remove the note to workaround the
	bug fixed by this changeset.
	* NEWS (Bug fixes): Mention that this bug is now fixed.
	Reported by Joerg Sonnenberger.
